--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -29,8 +29,8 @@ opt_in_rules: # some rules are only opt-in
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
-  # - DemoApp
   - CleanSwiftTests
+  - CleanSwiftExample
 
 # configurable rules can be customized from this configuration file
 # binary rules can set their severity level
